--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,6 @@ errno = "0.2"
 parking_lot = "0.5"
 serde = "1"
 serde_derive = "1"
-serde_json = "1"
-serde_yaml = "0.7"
 vte = "0.3"
 mio = "0.6"
 mio-more = "0.1"
@@ -31,6 +29,10 @@ arraydeque = "0.4"
 clippy = { version = "*", optional = true }
 env_logger = "0.5"
 base64 = "0.9.0"
+smart-default = "0.2.0"
+
+[dev-dependencies]
+serde_json = "1"
 
 [features]
 default = []
